src/test/resources/invalid/typecheck/VarInit_NotReal.vas
class Main is
    var r : Real = 42
end